# BasketNa

./: COPILOTKIT_SETUP.md  Front End  GEMINI_MIGRATION_GUIDE.md  PRICE_FORECASTING_SUMMARY.md  README.md  app.json  docker-compose.yml  package-lock.json  package.json
backend/: .env  .env.example  PERSONALIZED_RECOMMENDATIONS_SUMMARY.md  PROJECT_SUMMARY.md  ai_assistant.py  auth.py  config.py  crud.py  db.py  direct_search_test.py  enhanced_forecast.py  fastapi_server.py  flask_server.py  main.py  minimal_server.py  models.py  personalized_recommendations.py  pyproject.toml  recommendation_engine.py  requirements.txt  schemas.py  simple_forecast.py  simple_http_server.py  simple_main.py  simple_server.py  simple_test.py  test_ai_tools.py  test_api.py  test_data_loading.py  test_gemini.py  test_multiple_searches.py  test_personalized_recommendations.py  test_server.py  test_server_client.py  test_updated_api.py  test_website_links.py
backend/agents/: price_copilot.py  price_tools.py
backend/agents/tools/: README.md  calculate_drop_timeline.py  check_item_availability_across_sites.py  compare_all_sites.py  estimate_total_cost.py  fetch_historical_prices.py  find_coupons.py  generate_price_trend_graph.py  predict_price.py  scrape_price.py  suggest_alternatives.py  summarize_reviews.py  tool_integration.py
backend/data/: basketna.db  ecommerce_price_dataset_corrected.csv  events.csv  price_forecast_10_days.csv  price_forecast_30_days.csv  sample_prices.csv
backend/ml/: README.md  advanced_forecast.py  demo_comprehensive.py  forecast.py  forecast_enhanced.py  forecast_holidays.py  price_tracker_cli.py
crawler/: README.md  data_analyzer.py  example_usage.py  pyproject.toml  run_spiders.py  scrapy.cfg  test_spiders.py
crawler/data/: products_2025-08-21T03-57-24+00-00.csv  products_2025-08-21T03-57-24+00-00.json  products_2025-08-21T03-57-56+00-00.csv  products_2025-08-21T03-57-56+00-00.json  products_2025-08-21T04-18-58+00-00.csv  products_2025-08-21T04-18-58+00-00.json
crawler/ecommerce_scraper/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
(+93 files in other folders)
